[gd_scene load_steps=4 format=3 uid="uid://dj3b8i7bdcu8j"]

[ext_resource type="Script" path="res://scenes/screens/pause.gd" id="1_jh3kc"]
[ext_resource type="PackedScene" uid="uid://r7ir436tp4xh" path="res://scenes/menus/options_pause.tscn" id="2_62cup"]
[ext_resource type="Theme" uid="uid://dti72e04ltog4" path="res://game.theme" id="2_yt6iy"]

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jh3kc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.047, 0.017, 0.171, 0.227)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 445.0
offset_top = 141.0
offset_right = 706.0
offset_bottom = 206.0
theme = ExtResource("2_yt6iy")
theme_override_font_sizes/font_size = 50
text = "Paused"
horizontal_alignment = 1

[node name="PauseScreen" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = 3.0
offset_right = 159.0
offset_bottom = 362.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/PauseScreen"]
layout_mode = 2

[node name="Resume" type="Button" parent="ColorRect/PauseScreen/VBoxContainer"]
custom_minimum_size = Vector2(220, 90)
layout_mode = 2
theme = ExtResource("2_yt6iy")
theme_override_font_sizes/font_size = 41
text = "Resume"
icon_alignment = 1

[node name="Settings" type="Button" parent="ColorRect/PauseScreen/VBoxContainer"]
custom_minimum_size = Vector2(220, 90)
layout_mode = 2
theme = ExtResource("2_yt6iy")
theme_override_font_sizes/font_size = 41
text = "Settings"
icon_alignment = 1

[node name="MainMenuButton" type="Button" parent="ColorRect/PauseScreen/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme = ExtResource("2_yt6iy")
theme_override_font_sizes/font_size = 41
text = "Main Menu"
icon_alignment = 1

[node name="OptionsMenu" parent="." instance=ExtResource("2_62cup")]
visible = false
z_index = 1
layout_mode = 1

[connection signal="mouse_entered" from="ColorRect/PauseScreen/VBoxContainer/Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="ColorRect/PauseScreen/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="ColorRect/PauseScreen/VBoxContainer/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="pressed" from="ColorRect/PauseScreen/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="ColorRect/PauseScreen/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_mouse_entered"]
[connection signal="pressed" from="ColorRect/PauseScreen/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
